--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week 3 - Challenge 3</title>
   <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
+  <script src="./src/index.ts"></script>
 </head>
 
 <body>
