--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week 3 - Challenge 3</title>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
   <script type="module" src="./src/index.ts"></script>
+
 </head>
 
 <body>
-  <header></header>
-  <main></main>
+  <div id="root"></div>
+
 </body>
 
 </html>
